@startuml
hide empty members

package view {
    class GptUiController
    together {
        class GptUiApplication
        class "AnswerController" as grammarAnswerController <<GRAMMAR>>
        class "AnswerController" as openAiAnswerController <<OPEN_AI>>
        class "AnswerController" as claudeAnswerController <<CLAUDE>>
        class "AnswerController" as gcpAnswerController <<GCP>>
        class HistoryController
        class QuestionController
        class ThemeController
    }
}

package viewmodel {
    class "AnswerVM" as grammarAnswerVM <<GRAMMAR>>
    class "AnswerVM" as openAiAnswerVM <<OPEN_AI>>
    class "AnswerVM" as claudeAnswerVM <<CLAUDE>>
    class "AnswerVM" as gcpAnswerVM <<GCP>>
    class GptUiVM
    class HistoryVM
    class QuestionVM
    class ThemeVM
    class ViewModelMediator
}

package model{
    class StateModel
    class ClipboardModel
    class ConfigModel
    class FileModel
    class QuestionModel
    class StorageModel
}

ThemeController ---> ThemeVM
QuestionController ---> QuestionVM
HistoryController ---> HistoryVM
grammarAnswerController --> grammarAnswerVM
openAiAnswerController --> openAiAnswerVM
claudeAnswerController --> claudeAnswerVM
gcpAnswerController --> gcpAnswerVM
GptUiApplication --> GptUiVM

GptUiController --> grammarAnswerController
GptUiController --> openAiAnswerController
GptUiController --> claudeAnswerController
GptUiController --> gcpAnswerController

ThemeVM <--> ViewModelMediator
QuestionVM <--> ViewModelMediator
HistoryVM <--> ViewModelMediator
GptUiVM --> ViewModelMediator
grammarAnswerVM <--> ViewModelMediator
openAiAnswerVM <--> ViewModelMediator
claudeAnswerVM <--> ViewModelMediator
gcpAnswerVM <--> ViewModelMediator

ThemeVM ---> StateModel
HistoryVM ---> StateModel
QuestionVM ---> StateModel
QuestionVM ---> QuestionModel
QuestionVM ---> ClipboardModel

grammarAnswerVM --> StateModel
openAiAnswerVM --> StateModel
claudeAnswerVM --> StateModel
gcpAnswerVM --> StateModel

grammarAnswerVM --> QuestionModel
openAiAnswerVM --> QuestionModel
claudeAnswerVM --> QuestionModel
gcpAnswerVM --> QuestionModel

grammarAnswerVM --> ClipboardModel
openAiAnswerVM --> ClipboardModel
claudeAnswerVM --> ClipboardModel
gcpAnswerVM --> ClipboardModel


@enduml